fixing bugd url image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,9 @@ body {
     margin: 0;
     font-family: "Inter", sans-serif;
   }
+
+  .bg-movie {
+    background-image: url('/images/doctor.png');
+    background-position: 50% 35%;
+    background-size: cover;
+  }
